--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@prismicio/client": "^7.3.1",
     "dotenv": "^10.0.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.3.2",
     "pug": "^3.0.2"
   }
 }
